client/public/style.css
body {
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.info {
  color: lightgray;
}

.desc {
  padding-left: 50px;
}

.product {
  float: right;
  padding-top: 15px;
}

.image {
  max-width: 100%;
  max-height: auto;
}

.container {
  column-count: 2;
}

.style {
  object-fit: cover;
  height: 50px;
  width: 50px;
  padding: 10px;
  border-radius: 100%;
}

.style:hover {
  transform: scale(1.15);
}

.styleContainer {
  padding: 10px;
  padding-block: 5px;
}

.styleList {
  float: auto;
  padding: 5px;

}

.product-desc {
  float: bottom;
}

.nav {
  height: 50px;
  padding-left: 50px;
}

#mainImage {
  max-width: auto;
  height: auto;
}

#price {
  color: gray;
  font-size: 11px;
}

#style {
  color: darkgray;
  display:inline-block;
  padding-right: 5px;
}

#styleCategory {
  color: darkslategray;
  display: inline-block
}

#SpecialOverview {
  border-left: 2px dashed lightgray;
}

#overlay {
  position: absolute;
  top: 70px;
  z-index: 9;
}

.selector {
  width: 50px;
  height: auto;
  padding-bottom: 15px;
  padding-left: 15px;

}

.galleryImage {
  object-fit: cover;
  height: 50px;
  width: 50px;
  border: 3px solid gray;
}

.selector:hover {
  transform: scale(1.15)
}

